Forgot class button on theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 
       <div id="banner">
         <span id="logo"></span>
-        <a href="{{ '' | relative_url }}">Home</a>
+        <a href="{{ '' | relative_url }}" class="button">Home</a>
         <a href="{{ link.url }}" class="button">{{link.title}}</a>
         {% for link in site.menu %}
             <a href="{{ link.url }}" class="button">{{link.title}}</a>
