--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,11 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <style>
+      /* Small hack */
+      nav ul li { padding:2px 0!important; }
+      nav { overflow-y: auto; }
+    </style>
   </head>
   <body>
 
